remove stack 0 from map and add more people

--- a/index.html
+++ b/index.html
@@ -127,6 +127,42 @@
                 </div>
             </div>
         </div>
+        <div class="coisa-gay">
+            <div class="cabecalho-baitola"> "quando o kalindraz te chama de fofo e vc tá afk então não consegue chamar ele de lindo a tempo"</div>
+            <div class="conteudo-baitola">
+                <img height="150"
+                    src="https://cdn.discordapp.com/attachments/719636484117758042/719638220933169162/zxorast.png"
+                    alt="">
+                <div class="footer-baitola">
+                    <p class="nome-do-gay"> - Dada<img class="avatar" src="https://a.ppy.sh/9119507?1586546219.jpeg"
+                            width="50" height="50" alt="" srcset=""></p>
+                </div>
+            </div>
+        </div>
+        <div class="coisa-gay">
+            <div class="cabecalho-baitola"> "PARABENS KALINDRAZ PORRA FILHO DA PUTA TE AMO"</div>
+            <div class="conteudo-baitola">
+                <img height="150"
+                    src="https://cdn.discordapp.com/attachments/524761634149892122/719641347044278374/unknown.png"
+                    alt="">
+                <div class="footer-baitola">
+                    <p class="nome-do-gay"> - Skull Kid<img class="avatar" src="https://a.ppy.sh/3044264?1589346292.jpeg"
+                            width="50" height="50" alt="" srcset=""></p>
+                </div>
+            </div>
+        </div>
+        <div class="coisa-gay">
+            <div class="cabecalho-baitola"> "Feliz aniversário esquizofrênico"</div>
+            <div class="conteudo-baitola">
+                <img height="150"
+                    src="https://cdn.discordapp.com/attachments/717813813751316552/719642871346757732/unknown.png"
+                    alt="">
+                <div class="footer-baitola">
+                    <p class="nome-do-gay"> - Arthur Esvael<img class="avatar" src="https://a.ppy.sh/5980661?1590259051.jpeg"
+                            width="50" height="50" alt="" srcset=""></p>
+                </div>
+            </div>
+        </div>
     </div>
 
         <div class="download">
