add rensia doacre

--- a/index.html
+++ b/index.html
@@ -163,6 +163,42 @@
                 </div>
             </div>
         </div>
+        <div class="coisa-gay">
+            <div class="cabecalho-baitola"> "E o clipe do free fire, ja rendeu quanto?"</div>
+            <div class="conteudo-baitola">
+                <img height="150"
+                    src="https://discordapp.com/assets/2c675857bded304870f3aedc02de2ffb.svg"
+                    alt="">
+                <div class="footer-baitola">
+                    <p class="nome-do-gay"> - Gaab<img class="avatar" src="https://a.ppy.sh/7710249?1587613339.jpeg"
+                            width="50" height="50" alt="" srcset=""></p>
+                </div>
+            </div>
+        </div>
+        <div class="coisa-gay">
+            <div class="cabecalho-baitola"> "FELIZ ANIVERSÁRIO SEU FILHO DE UMA PUTA, VAI SE FUDEEEEEEEEEEEEEEEER"</div>
+            <div class="conteudo-baitola">
+                <img height="150"
+                    src="https://cdn.discordapp.com/attachments/717813813751316552/719645425153343559/DBv8XRNXsAAnMMm.jpg"
+                    alt="">
+                <div class="footer-baitola">
+                    <p class="nome-do-gay"> - DoAcre<img class="avatar" src="https://a.ppy.sh/3712848?1583450894.jpeg"
+                            width="50" height="50" alt="" srcset=""></p>
+                </div>
+            </div>
+        </div>
+        <div class="coisa-gay">
+            <div class="cabecalho-baitola"> "Feliz aniversauro, toma aqui um dinossauro!"</div>
+            <div class="conteudo-baitola">
+                <img height="150"
+                    src="https://cdn.discordapp.com/attachments/582344556389859333/719647762559533107/unknown.png"
+                    alt="">
+                <div class="footer-baitola">
+                    <p class="nome-do-gay"> - Rensia<img class="avatar" src="https://a.ppy.sh/9598254?1591233904.jpeg"
+                            width="50" height="50" alt="" srcset=""></p>
+                </div>
+            </div>
+        </div>
     </div>
 
         <div class="download">
