add akaeboshi luiz

--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
     <p class="gay">Parabéns Kalindraz</p>
     <div class="baitolagens">
         <div class="coisa-gay">
+            <div class="cabecalho-baitola"> "ZOTOMAYORRRRRRRRRRRRRRR"</div>
+            <div class="conteudo-baitola"> <video height="200" controls>
+                    <source
+                        src="https://cdn.discordapp.com/attachments/690356284025077917/711368262092587018/72662483_389543101964915_1014214990321680384_n.mp4"
+                        type="video/mp4"></video></div>
+            <div class="footer-baitola">
+                <p class="nome-do-gay"> - Maoto<img class="avatar" src="https://a.ppy.sh/3914271?1588403678.jpeg"
+                        width="50" height="50" alt="" srcset=""></p>
+            </div>
+        </div>
+        <div class="coisa-gay">
             <div class="cabecalho-baitola"> "CAVALO"</div>
             <div class="conteudo-baitola"> <img src="https://cdn.discordapp.com/emojis/715234766542209145.gif?v=1"
                     height="150"></div>
@@ -52,17 +63,6 @@
                     height="150"></div>
             <div class="footer-baitola">
                 <p class="nome-do-gay"> - K4l1<img class="avatar" src="https:\/\/a.ppy.sh\/11334594?1553569670.jpeg"
-                        width="50" height="50" alt="" srcset=""></p>
-            </div>
-        </div>
-        <div class="coisa-gay">
-            <div class="cabecalho-baitola"> "ZOTOMAYORRRRRRRRRRRRRRR"</div>
-            <div class="conteudo-baitola"> <video height="200" controls>
-                    <source
-                        src="https://cdn.discordapp.com/attachments/690356284025077917/711368262092587018/72662483_389543101964915_1014214990321680384_n.mp4"
-                        type="video/mp4"></video></div>
-            <div class="footer-baitola">
-                <p class="nome-do-gay"> - Maoto<img class="avatar" src="https://a.ppy.sh/3914271?1588403678.jpeg"
                         width="50" height="50" alt="" srcset=""></p>
             </div>
         </div>
@@ -182,7 +182,7 @@
                     src="https://cdn.discordapp.com/attachments/717813813751316552/719645425153343559/DBv8XRNXsAAnMMm.jpg"
                     alt="">
                 <div class="footer-baitola">
-                    <p class="nome-do-gay"> - DoAcre<img class="avatar" src="https://a.ppy.sh/3712848?1583450894.jpeg"
+                    <p class="nome-do-gay"> - DoAcre<img class="avatar" src="https://i.pinimg.com/originals/7d/f2/03/7df20331e021f28624a436648ffbcbff.gif"
                             width="50" height="50" alt="" srcset=""></p>
                 </div>
             </div>
@@ -195,6 +195,30 @@
                     alt="">
                 <div class="footer-baitola">
                     <p class="nome-do-gay"> - Rensia<img class="avatar" src="https://a.ppy.sh/9598254?1591233904.jpeg"
+                            width="50" height="50" alt="" srcset=""></p>
+                </div>
+            </div>
+        </div>
+        <div class="coisa-gay">
+            <div class="cabecalho-baitola"> "N sei editar no mobile"</div>
+            <div class="conteudo-baitola">
+                <img height="150"
+                    src="https://cdn.discordapp.com/attachments/691291158638493716/719652287680610454/Issaesunglasses.png"
+                    alt="">
+                <div class="footer-baitola">
+                    <p class="nome-do-gay"> - xxluizxx47<img class="avatar" src="https://a.ppy.sh/4687701?1590512594.jpeg"
+                            width="50" height="50" alt="" srcset=""></p>
+                </div>
+            </div>
+        </div>
+        <div class="coisa-gay">
+            <div class="cabecalho-baitola"> "Hoje é um dia especial, te dou essa foto você não viu nada igual, olha só menino quantos anos você fez, só sei que 'cê 'tá lindo e merece um parabéns. :heart:"</div>
+            <div class="conteudo-baitola">
+                <img height="150"
+                    src="https://cdn.discordapp.com/attachments/691291158638493716/719652287680610454/Issaesunglasses.png"
+                    alt="">
+                <div class="footer-baitola">
+                    <p class="nome-do-gay"> - Akaeboshi<img class="avatar" src="https://a.ppy.sh/10466730?1588905782.jpeg"
                             width="50" height="50" alt="" srcset=""></p>
                 </div>
             </div>
