--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
             <div class="cabecalho-baitola"> "FELIZ ANIVERSÁRIO SEU FILHO DE UMA PUTA, VAI SE FUDEEEEEEEEEEEEEEEER"</div>
             <div class="conteudo-baitola">
                 <img height="150"
-                    src="https://cdn.discordapp.com/attachments/717813813751316552/719645425153343559/DBv8XRNXsAAnMMm.jpg"
+                    src="https://i.pinimg.com/originals/7d/f2/03/7df20331e021f28624a436648ffbcbff.gif"
                     alt="">
                 <div class="footer-baitola">
-                    <p class="nome-do-gay"> - DoAcre<img class="avatar" src="https://i.pinimg.com/originals/7d/f2/03/7df20331e021f28624a436648ffbcbff.gif"
+                    <p class="nome-do-gay"> - DoAcre<img class="avatar" src="https://a.ppy.sh/3712848?1583450894.jpeg"
                             width="50" height="50" alt="" srcset=""></p>
                 </div>
             </div>
